--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl module Geo::Coder::Many.
 
+0.19    5 Jan 2011
+        - added Geo::Coder::Many::Ovi
+        - added link to Dec 2010 London Perl Workshop talk in POD
+        - fixed typo in Geo::Coder::Many::SimpleGeo
+        - require Test::Simple, not Test::More
+
 0.18    3 Dec 2010
         - return undef when precision is unknown as per pod,
           had previously been returning 1 from SimpleGeo and Mapquest
