Import of EDF/Geo-Coder-Many-0.2 from CPAN.
gitpan-cpan-distribution: Geo-Coder-Many
gitpan-cpan-version:      0.2
gitpan-cpan-path:         EDF/Geo-Coder-Many-0.2.tar.gz
gitpan-cpan-author:       EDF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl module Geo::Coder::Many.
 
+0.20    22 Feb 2011
+        - added Geo::Coder::Many::Googlev3
+        - fixed bug in causing division by zero error
+          when creating default (WRR) scheduler without weights
+
 0.19    5 Jan 2011
         - added Geo::Coder::Many::Ovi
         - added link to Dec 2010 London Perl Workshop talk in POD
